feat: remove null value in class error and replace them with missing discretionary values errors.